# algo-daily-crawler

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily-crawl.yml
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/history/: page.tsx
dashboard/src/app/problems/: page.tsx
dashboard/src/app/problems/[id]/: page.tsx
dashboard/src/app/stats/: page.tsx
dashboard/src/components/: DifficultyBadge.tsx  LanguageFilter.tsx  ProblemCard.tsx  ProblemListFilter.tsx  RecommendationList.tsx  SearchInput.tsx  TagChip.tsx
dashboard/src/components/charts/: RecommendationTrendChart.tsx  TagDistributionChart.tsx  TierDistributionChart.tsx
dashboard/src/lib/: constants.ts  supabase.ts
sql/: 001_initial_schema.sql
src/crawler/: config.py  db.py  main.py
src/crawler/crawlers/: base.py  registry.py  solved_ac.py
src/crawler/models/: crawl_log.py  problem.py
src/crawler/recommender/: base.py  daily.py  strategies.py
src/crawler/scheduler/: jobs.py
supabase/: config.toml
